# Google-CKM-Agent-Ollama

./: .gitignore  README.md  example.py  examples.md  pyproject.toml  requirements.txt  root_agent.yaml  verify_setup.py
src/: __init__.py  agent.py  intake_agent.py  mediator.py  output_templates.py  specialists.py  utils.py
